Enhance recipe listings and add link to original recipe for Bibimbap
In index.html:
- Replaced anchor tags with a unordered list (ul) element to list the recipes, providing a more structured and organized display of recipes.

In recipes/bibimbap.html:
- Added a link to the original recipe on Allrecipes for Bibimbap, providing users with additional reference and information.

Added new file:
- images/egg_drop_soup.jpg
- recipes/egg_drop_soup.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +11,15 @@
         }
     </style>
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/bibimbap.html">Bibimbap</a>
+    <ul>
+        <li><a href="./recipes/bibimbap.html">Bibimbap</a></li>
+        <li><a href="./recipes/egg_drop_soup.html">Egg Drop Soup</a>
+        </li>
+        <li></li>
+    </ul>
 </body>
+
 </html>
