Add image for pork dumplings recipe and update related files
Added:
- New image file: pork_dumplings.jpg

Updated:
- ../index.html: Modified content related to pork dumplings.
- ../recipes/bibimbap.html: Modified content related to pork dumplings.
- ../recipes/egg_drop_soup.html: Modified content related to pork dumplings.

Untracked:
- New recipe file: ../recipes/pork_dumplings.html

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Bibimbap (<em>Korean Rice With Mixed Vegetables</em>)</h1>
+    <h1>🥗 Bibimbap (<em>Korean Rice With Mixed Vegetables</em>)</h1>
     <img src="../images/bibimbap.jpg" alt="Bibimbap (Korean Rice With Mixed Vegetables)" width="400">
     <hr>
     <h2>Description</h2>
