--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/bibimbap.html">Bibimbap</a></li>
-        <li><a href="./recipes/egg_drop_soup.html">Egg Drop Soup</a>
+        <li>
+            <a href="./recipes/bibimbap.html">🥗 Bibimbap</a>
         </li>
-        <li></li>
+        <li>
+            <a href="./recipes/egg_drop_soup.html">🍲 Egg Drop Soup</a>
+        </li>
+        <li>
+            <a href="./recipes/pork_dumplings.html">🥟 Pork Dumplings</a>
+        </li>
     </ul>
 </body>
 
