--- a/recipes/egg_drop_soup.html
+++ b/recipes/egg_drop_soup.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Egg Drop Soup</h1>
+    <h1>🍲 Egg Drop Soup</h1>
     <img src="../images/egg_drop_soup.jpg" alt="Egg Drop Soup" width="400">
     <hr>
     <h2>Description</h2>
