Add "Go back" link to recipe pages
Added a "Go back" link to the recipes pages for easier navigation back to the index page.

Modified:
- recipes/bibimbap.html
- recipes/egg_drop_soup.html
- recipes/pork_dumplings.html

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -98,6 +98,7 @@
         </li>
     </ol>
     <hr>
+    <a href="../index.html">Go back</a>
     <p><small>Original recipe on <a
                 href="https://www.allrecipes.com/recipe/228240/bibimbap-korean-rice-with-mixed-vegetables/">Allrecipes</a></small>
     </p>
