--- a/recipes/egg_drop_soup.html
+++ b/recipes/egg_drop_soup.html
@@ -57,6 +57,7 @@
         </li>
     </ol>
     <hr>
+    <a href="../index.html">Go back</a>
     <p><small>Original recipe on <a
                 href="https://www.allrecipes.com/recipe/45515/restaurant-style-egg-drop-soup/">Allrecipes</a></small>
     </p>
