--- a/recipes/pork_dumplings.html
+++ b/recipes/pork_dumplings.html
@@ -70,6 +70,7 @@
         </li>
     </ol>
     <hr>
+    <a href="../index.html">Go back</a>
     <p><small>Original recipe on <a
                 href="https://www.allrecipes.com/recipe/14759/pork-dumplings/">Allrecipes</a></small>
     </p>
