--- a/recipes/pork_dumplings.html
+++ b/recipes/pork_dumplings.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pork Dumplings</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
