--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li>
-            <a href="./recipes/bibimbap.html">🥗 Bibimbap</a>
-        </li>
-        <li>
-            <a href="./recipes/egg_drop_soup.html">🍲 Egg Drop Soup</a>
-        </li>
-        <li>
-            <a href="./recipes/pork_dumplings.html">🥟 Pork Dumplings</a>
-        </li>
-    </ul>
+    <div class="menu-card">
+        <h1>Odin Recipes</h1>
+        <ul class="menu-card-context">
+            <li>
+                <a href="./recipes/bibimbap.html">🥗 Bibimbap</a>
+            </li>
+            <li>
+                <a href="./recipes/egg_drop_soup.html">🍲 Egg Drop Soup</a>
+            </li>
+            <li>
+                <a href="./recipes/pork_dumplings.html">🥟 Pork Dumplings</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
