Refactor styling: Added index.css, updated styles.css, and modified HTML files for consistency

--- a/index.html
+++ b/index.html
@@ -4,21 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <!-- <link rel="stylesheet" href="css/styles.css" /> -->
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
     <div class="menu-card">
-        <h1>Odin Recipes</h1>
-        <ul class="menu-card-context">
+        <h1 class="title">Odin Recipes</h1>
+        <ul class="menu-card-list">
             <li>
-                <a href="./recipes/bibimbap.html">🥗 Bibimbap</a>
+                <div class="item-container">
+                    <a href="./recipes/bibimbap.html">🥗 Bibimbap</a>
+                    <p>Korean Rice With Mixed Vegetables</p>
+                </div>
             </li>
             <li>
-                <a href="./recipes/egg_drop_soup.html">🍲 Egg Drop Soup</a>
+                <div class="item-container">
+                    <a href="./recipes/egg_drop_soup.html">🍲 Egg Drop Soup</a>
+                    <p>Classic Restaurant Style Chinese Egg Drop Soup</p>
+                </div>
             </li>
             <li>
-                <a href="./recipes/pork_dumplings.html">🥟 Pork Dumplings</a>
+                <div class="item-container">
+                    <a href="./recipes/pork_dumplings.html">🥟 Pork Dumplings</a>
+                    <p>All Time Favorite Classic Dumplings With Savory Pork Filling</p>
+                </div>
             </li>
         </ul>
     </div>
