--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -11,8 +11,8 @@
 <body>
     <div class="recipe-card">
         <img src="../images/bibimbap.jpg" alt="Bibimbap (Korean Rice With Mixed Vegetables)">
+        <h1 class="title">🥗 Bibimbap (<em>Korean Rice With Mixed Vegetables</em>)</h1>
         <div class="recipe-content">
-            <h1>🥗 Bibimbap (<em>Korean Rice With Mixed Vegetables</em>)</h1>
             <hr>
             <h2>Description</h2>
             <p>
