--- a/recipes/egg_drop_soup.html
+++ b/recipes/egg_drop_soup.html
@@ -11,8 +11,8 @@
 <body>
     <div class="recipe-card">
         <img src="../images/egg_drop_soup.jpg" alt="Egg Drop Soup">
+        <h1 class="title">🍲 Egg Drop Soup</h1>
         <div class="recipe-content">
-            <h1>🍲 Egg Drop Soup</h1>
             <hr>
             <h2>Description</h2>
             <p>
