--- a/recipes/pork_dumplings.html
+++ b/recipes/pork_dumplings.html
@@ -11,8 +11,8 @@
 <body>
     <div class="recipe-card">
         <img src="../images/pork_dumplings.jpg" alt="Pork Dumplings">
+        <h1 class="title">🥟 Pork Dumplings</h1>
         <div class="recipe-content">
-            <h1>🥟 Pork Dumplings</h1>
             <hr>
             <h2>Description</h2>
             <p>
