modified: Recipe brief description rephrased

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>
                 <div class="item-container">
                     <a href="./recipes/pork_dumplings.html">🥟 Pork Dumplings</a>
-                    <p>All Time Favorite Classic Dumplings With Savory Pork Filling</p>
+                    <p>Classic Dumplings With Savory Pork Filling</p>
                 </div>
             </li>
         </ul>
