Modified: Egg drop soup brief description

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li>
                 <div class="item-container">
                     <a href="./recipes/egg_drop_soup.html">🍲 Egg Drop Soup</a>
-                    <p>Classic Restaurant Style Chinese Egg Drop Soup</p>
+                    <p>Restaurant Style Chinese Egg Drop Soup</p>
                 </div>
             </li>
             <li>
