Changed some styling

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -11,7 +11,7 @@
 <body>
     <div class="recipe-card">
         <img src="../images/bibimbap.jpg" alt="Bibimbap (Korean Rice With Mixed Vegetables)">
-        <h1 class="title">🥗 Bibimbap (<em>Korean Rice With Mixed Vegetables</em>)</h1>
+        <h1 class="title">🥗 Bibimbap</h1>
         <div class="recipe-content">
             <hr>
             <h2>Description</h2>
